# z4j-brain

./: CHANGELOG-1.x-legacy.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
backend/: .coverage  DOCKERHUB.md  Dockerfile  alembic.ini  pytest.ini
backend/src/z4j_brain/: __init__.py  alembic.ini  allowed_hosts.py  audit_retention.py  backup.py  cli.py  embedded_scheduler.py  errors.py  logging_config.py  main.py  settings.py  startup.py  startup_version.py  wal_checkpoint.py
backend/src/z4j_brain/api/: __init__.py  _export.py  _pagination.py  agent_longpoll.py  agent_workers.py  agents.py  api_keys.py  audit.py  auth.py  commands.py  deps.py  events.py  health.py  home.py  invitations.py  memberships.py  metrics.py  notifications.py  projects.py  queues.py  schedulers_fleet.py  schedules.py  setup.py  stats.py  system.py  tasks.py  trends.py  user_notifications.py  users.py  workers.py
backend/src/z4j_brain/auth/: __init__.py  common_passwords.py  csrf.py  ip.py  passwords.py  scopes.py  sessions.py
backend/src/z4j_brain/data/: versions.json
backend/src/z4j_brain/docs/: audit-canonical-fields.md
backend/src/z4j_brain/domain/: __init__.py  audit_service.py  auth_service.py  command_dispatcher.py  event_ingestor.py  ip_rate_limit.py  policy_engine.py  scheduler_rate_limiter.py  setup_service.py  version_check.py
backend/tests/integration/: conftest.py  test_audit_log_trigger.py  test_citext_email.py  test_default_subscription_pg.py  test_end_to_end_loop.py  test_events_partitioning.py  test_migration_pg.py  test_postgres_notify_dashboard_hub.py  test_postgres_notify_registry.py  test_registry_reconcile.py
backend/tests/unit/: conftest.py  test_allowed_schedulers.py  test_api_key_expires_tz.py  test_audit_phase2_fixes.py  test_audit_phase3_fixes.py  test_audit_retention.py  test_audit_service.py  test_auth_endpoint.py  test_b4_endpoints.py  test_b5_endpoints.py  test_background_workers.py  test_body_size.py  test_channel_validation.py  test_cli_upgrade.py  test_command_dispatcher.py  test_compat_fixes.py  test_csrf.py  test_dashboard_sub_cap.py  test_dashboard_ws_origin.py  test_default_subscription_repro.py  test_default_subscription_update.py  test_embedded_scheduler.py  test_errors.py  test_event_ingestor.py  test_event_ingestor_batch6.py  test_event_ingestor_p1_bulk.py  test_event_ingestor_security.py  test_export_formula_injection.py  test_frame_router_heartbeat_e2e.py  test_health.py  test_home_aggregates.py  test_host_validation.py  test_invitations.py  test_local_dashboard_hub.py  test_local_registry.py  test_local_registry_worker_first.py  test_migration.py  test_migration_0012_audit_unique.py  test_models_smoke.py  test_notifications_audit.py  (+34 more)
dashboard/: .gitignore  .npmrc  Dockerfile.dev  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dashboard/scripts/: fetch-openapi-snapshot.mjs
dashboard/src/: main.tsx
dashboard/src/components/: command-palette.tsx  error-boundary.tsx  shortcuts-dialog.tsx  z4j-mark.tsx
dashboard/src/hooks/: use-agents.ts  use-audit.ts  use-auth.ts  use-commands.ts  use-dashboard-socket.ts  use-events.ts  use-home.ts  use-invitations.ts  use-keyboard-shortcuts.ts  use-memberships.ts  use-notifications.ts  use-projects.ts  use-queues.ts  use-schedulers-fleet.ts  use-schedules.ts  use-stats.ts  use-tasks.ts  use-trends.ts  use-users.ts  use-workers.ts
dashboard/src/lib/: api-types-check.ts  api-types.ts  api.ts  dashboard-socket.ts  dst-warnings.ts  engine-capabilities.ts  format.ts  openapi-snapshot.json  openapi-types.gen.ts  query-client.ts  utils.ts
dashboard/src/routes/: __root.tsx  _authenticated.account.tsx  _authenticated.admin.schedulers.tsx  _authenticated.admin.users.tsx  _authenticated.home.tsx  _authenticated.projects.$slug.agents.tsx  _authenticated.projects.$slug.audit.tsx  _authenticated.projects.$slug.commands.tsx  _authenticated.projects.$slug.index.tsx  _authenticated.projects.$slug.queues.tsx  _authenticated.projects.$slug.schedules.tsx  _authenticated.projects.$slug.schedules_.$scheduleId.tsx  _authenticated.projects.$slug.schedules_.reconcile.tsx  _authenticated.projects.$slug.settings.defaults.tsx  _authenticated.projects.$slug.settings.deliveries.tsx  _authenticated.projects.$slug.settings.index.tsx  _authenticated.projects.$slug.settings.members.tsx  _authenticated.projects.$slug.settings.notifications.channels.tsx  _authenticated.projects.$slug.settings.notifications.deliveries.tsx  _authenticated.projects.$slug.settings.notifications.index.tsx  _authenticated.projects.$slug.settings.notifications.subscriptions.tsx  _authenticated.projects.$slug.settings.notifications.tsx  _authenticated.projects.$slug.settings.providers.tsx  _authenticated.projects.$slug.settings.tsx  _authenticated.projects.$slug.tasks.tsx  _authenticated.projects.$slug.tasks_.$engine.$taskId.tsx  _authenticated.projects.$slug.trends.tsx  _authenticated.projects.$slug.tsx  _authenticated.projects.$slug.workers.tsx  _authenticated.projects.$slug.workers_.$workerId.tsx  _authenticated.settings.account.tsx  _authenticated.settings.api-keys.tsx  _authenticated.settings.appearance.tsx  _authenticated.settings.channels.tsx  _authenticated.settings.general.tsx  _authenticated.settings.index.tsx  _authenticated.settings.memberships.tsx  _authenticated.settings.notifications.channels.tsx  _authenticated.settings.notifications.deliveries.tsx  _authenticated.settings.notifications.index.tsx  (+10 more)
dashboard/src/styles/: globals.css
dashboard/tests/: setup.ts
dashboard/tests/e2e/: README.md  crash-coverage.spec.ts  fixtures.ts  spine.spec.ts  visual-regression.spec.ts
dashboard/tests/unit/: api-security.test.ts  badge.test.tsx  button.test.tsx  dst-warnings.test.ts  engine-capabilities.test.ts  lib-format.test.ts  password-dialog.test.tsx  state-badges.test.tsx  theme-provider.test.tsx  theme-toggle.test.tsx  version-mismatch-banner.test.tsx
src/z4j_brain_shim/: __init__.py
(+170 files in other folders)
